# pico-usb-gadget

./: CMakeLists.txt  LICENSE  README.md  main.c  setup.sh  tusb_config.h  usb_descriptors.c
